Corrected functionality of date calculations Minor Refactoring